2008-11-24	Brian J. Tarricone <bjt23@cornell.edu>

	* configure.ac.in: Remove 'git' version tag for 0.1.0 release.

2008-11-24	Brian J. Tarricone <bjt23@cornell.edu>

	* {icons/48x48,xfce4-notifyd}/Makefile.am: Fix make distcheck.

2008-11-24	Brian J. Tarricone <bjt23@cornell.edu>

	* icons/48x48/xfce4-notifyd.png: Add app icon.
	* xfce4-notifyd-config/xfce4-notifyd-config.desktop.in: Set
	  Icon= key.
	* configure.ac.in,Makefile.am: Add icons subdir to build.

2008-11-24	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/xfce4-notifyd-config.glade: Fix dialog
	  layout spacing and add scrolled window shadow.

2008-11-21	Brian J. Tarricone <bjt23@cornell.edu>

	* Makefile.am: Add release targets.

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/main.c: Remove a couple strings.
	* po/xfce4-notifyd.pot: Update .pot file.

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* NEWS: Add NEWS file for first release.
	* xfce4-notifyd-config/main.c: Sort items in the themes list.

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd/{org.freedesktop.Notifications.service.in,Makefile.am}:
	  Install xfce4-notifyd to $libexecdir instead of $bindir

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/xfce4-notifyd-config.glade: Change window
	  title to simply 'Notifications'
	* po/xfce4-notifyd.pot: Update .pot file

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/Makefile.am, xfce4-notifyd-config/main.c,
	  xfce4-notifyd-config/xfce4-notifyd-config.desktop.in,
	  xfce4-notifyd-config/xfce4-notifyd-config.glade: make config dialog
	  pluggable into xfce settings manager, add --version option

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* README: add readme content

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/xfce4-notifyd-config.glade: set spin buton
	  page size to zero

2008-11-07	Brian J. Tarricone <bjt23@cornell.edu>
