@@ -1,0 +1,25 @@
+.TH XFCE4-NOTIFYD-CONFIG "1" "November 2008" "xfce4-notifyd-config 0.1.0"
+.SH NAME
+xfce4-notifyd-config \- configuration GUI for xfce4-notifyd
+.SH SYNOPSIS
+.TP
+\fBxfce4\-notifyd\-config\fR [\fB\-?\fR] [\fB\-V\fR] [\fB\-s\fR \fISOCKET_ID\fR] [\fB\-\-display\fR=\fIDISPLAY\fR]
+.SH DESCRIPTION
+\fBxfce4\-notifyd\-config\fR will launch the configuration GUI for xfce4-notifyd.
+.SH OPTIONS
+.TP
+\fB\-?\fR, \fB\-\-help\fR
+Show help
+.TP
+\fB\-V\fR, \fB\-\-version\fR
+Display version information
+.TP
+\fB\-s\fR, \fB\-\-socket\-id\fR=\fISOCKET_ID\fR
+Settings manager socket
+.TP
+\fB\-\-display\fR=\fIDISPLAY\fR
+X display to use
+.SH AUTHORS
+\fBxfce4-notifyd-config\fR was written by Brian Tarricone <bjt23@cornell.edu>.
+.br
+This manual page was written by Evgeni Golov <sargentd@die-welt.net> for the Debian Project but may be used by everyone under the terms of GPL-2+.
